Update Deep Learning Red Neuronal XOR.ipynb

--- a/Clase01/Deep Learning Red Neuronal XOR.ipynb
+++ b/Clase01/Deep Learning Red Neuronal XOR.ipynb
@@ -28,7 +28,7 @@
     "id": "8Wa8MlUO4GYo"
    },
    "source": [
-    "[Red Neuronal XOR](https://drive.google.com/file/d/1JHihujiBDJZlPeZTMZI7xmyEoBORqLN3/view)"
+    "[Red Neuronal XOR](https://github.com/AnahiBazet/DeepLearningI-TPs/blob/master/Clase01/Red%20Neuronal%20XOR.pdf)"
    ]
   },
   {
